Added some lovely CSS Extension

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <header class="title-bar">
     <h1 class="page-title">The Planets of Our Solar System</h1>
   </header>
-
+  <main class="main-layout">
   <nav class="planets-menu">
     <a id="Mercury" class="planet-menu-item">Mercury</a>
     <a id="Venus" class="planet-menu-item">Venus</a>
@@ -29,6 +29,7 @@
   <section class="planet-details">
 
   </section>
+</main>
 </body>
 
 </html>
